Improive main.go, add wire genare DI for Handler,Service,Repository
