# internal/docs/swagger.json
@@ -159,6 +159,11 @@
         },
         "/cart/add": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Add a product to the user's cart with specified quantity",
                 "consumes": [
                     "application/json"
@@ -246,6 +251,11 @@
         },
         "/cart/items": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve the list of items in the user's cart",
                 "consumes": [
                     "application/json"
@@ -296,6 +306,11 @@
         },
         "/cart/remove": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Remove a product from the user's cart",
                 "consumes": [
                     "application/json"
@@ -1014,6 +1029,9 @@
                 "order_date": {
                     "type": "string"
                 },
+                "status": {
+                    "type": "string"
+                },
                 "total_amount": {
                     "type": "number"
                 },
@@ -1033,6 +1051,9 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "price": {
+                    "type": "number"
                 },
                 "sku": {
                     "type": "string"
